# wikiScraper

./: #dewefwef#  #sitetree.json#  #test.py#  .gitignore  CHANGELOG.md  README.md  crypto-slu.cabal~  default.nix  default.nix~  deleteme.html  deleteme.html~  deleteme2.txt  deleteme2.txt~  dewjfniewjfnw.py  filepath  genre<->start.txt  genres.csv  genres.csv~  genresUO.txt  genresUWO.txt  genresWLU.txt  genres_for_lauren.txt  node-packages.nix  package-lock.json  package.json  shell.nix  shell.nix~  test.py  test.py~  wikiScraper-notes.hs  wikiScraper-notes.hs~  wikiScraper-notes.txt  wikiScraper-notes.txt~  wikiScraper.cabal  wikiScraper.cabal~
app/: #Concurrent.hs#  Concurrent.hs  Concurrent.hs.save  Concurrent.hs~  Deprecated.hs  Deprecated.hs~  Main.hs  Main.hs.save  Main.hs.save.1  ScrapeWiki.hs~  Sequential.hs  Sequential.hs~  StartGenre.hs  StartGenre.hs~  Types.hs  Types.hs~
db/work/: postgresql.conf
db/work/base/1/: 3456
db/work/base/14443/: 2619
db/work/base/14444/: 14299  3164
db/work/global/: 1262  2671  2672  pg_control
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
