cabal-version:      2.4
name:               wikiScraper
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             galen
maintainer:         galen.sprout@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


                    
executable wikiScraper
    main-is:          Main.hs
                          
    ghc-options: -threaded -rtsopts
    -- Modules included in this executable, other than Main.
    other-modules:
        StartGenre
        Sequential
        ScrapeWiki
        Concurrent
        Types
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , scrappy
                    , http-client-tls
                    , http-client
                    , parsec
                    , text
                    , containers
                    , aeson
                    , directory
                    , cryptohash
                    , bytestring
                    , transformers
                    , time
                    , uri-encode
                    , csv
                    , postgresql-simple
--                    , gargoyle-postgresql-connect
                    , stm
                    , uuid
                    , extra  
    hs-source-dirs:   app
    default-language: Haskell2010
